--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
                 <li><a href="">Inspiration</a></li>
             </ul>
         </div>
-            <a href="" class="btn bg-primary">Sign in</a>
+            <a href="" class="sign btn bg-primary">Sign in</a>
+            <div class="toggle_menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
              </div>
     </div>
   </header>
   </header>
+  <script src="/script.js"></script>
 </body>
 </html>
